Fixed https://github.com/surveyjs/service/issues/1933 - A SurveyJS Creator flickers when updating a survey JSON from within the custom tab

--- a/packages/survey-creator-core/src/components/toolbox/toolbox.scss
+++ b/packages/survey-creator-core/src/components/toolbox/toolbox.scss
@@ -12,6 +12,8 @@ svc-toolbox {
   box-sizing: border-box;
   overflow-y: auto;
   direction: rtl;
+  scrollbar-gutter: stable;
+  padding-left: calc(calcSize(2) - 12px);
 }
 
 .svc-toolbox--compact {
@@ -111,7 +113,7 @@ svc-toolbox {
 }
 
 
-.svc-toolbox__category--collapsed{
+.svc-toolbox__category--collapsed {
   .svc-toolbox__tool {
     height: 0;
     visibility: hidden;
